- 자산현황 계산 및 로그 추가